--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/index.js" defer></script>
     <title>Document</title>
 </head>
 <body>
@@ -30,7 +31,15 @@
                 </nav>
 
                 <nav class="mobile-nav">
-                 
+                    <button id="close_mob_nav"> <img src="./public/assets/x.svg" alt=""></button>
+                        <ul>
+
+                            <li><a href="">Home</a></li>
+                            <li>About Us</li>
+                            <li>Menu</li>
+                            <li>Contact Us</li>
+
+                        </ul>
                  </nav>
                 <div class="header_controllers">
                        <button id="mobile-btn"> <img src="./public/assets/menu.svg" alt=""></button>
