--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             </main>
    
                 
-            <footer class="footer">
+            <!-- <footer class="footer">
                 <div>
                     <img width="50" src="./public/assets/logo.png" alt="">
                 </div>
@@ -182,7 +182,7 @@
                     <input type="text">
                     <button>Send</button>
                 </div>
-            </footer>
+            </footer> -->
 
         </div>
 
