--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <script src="./js/index.js" defer></script>
-    <title>Document</title>
+    <title>Lion Burger</title>
 </head>
 <body>
     
@@ -164,7 +164,7 @@
             </main>
    
                 
-            <!-- <footer class="footer">
+           <footer class="footer">
                 <div>
                     <img width="50" src="./public/assets/logo.png" alt="">
                 </div>
@@ -182,7 +182,7 @@
                     <input type="text">
                     <button>Send</button>
                 </div>
-            </footer> -->
+            </footer>
 
         </div>
 
