--- a/index.html
+++ b/index.html
@@ -158,48 +158,48 @@
                          <div class="menu_item">
                             <img src="./public/assets/Image20251025093856.png" alt="">
                                <div>
-                                <h4>Hamburger</h4>
+                                <h4>Salad</h4>
+                                <p>~ 5.99 $</p>
+                                <button>Order now</button>
+                               </div> 
+                        </div>
+                                                 <div class="menu_item">
+                            <img src="./public/assets/Image20251025093934.png" alt="">
+                               <div>
+                                <h4>Classic Salad</h4>
                                 <p>~ 6.99 $</p>
                                 <button>Order now</button>
                                </div> 
                         </div>
                                                  <div class="menu_item">
-                            <img src="./public/assets/Image20251025093856.png" alt="">
+                            <img src="./public/assets/Image20251025093938.png" alt="">
                                <div>
-                                <h4>Hamburger</h4>
+                                <h4>Fruit Salad</h4>
+                                <p>~ 4.99 $</p>
+                                <button>Order now</button>
+                               </div> 
+                        </div>
+                                                 <div class="menu_item">
+                            <img src="./public/assets/Image20251025093942.png" alt="">
+                               <div>
+                                <h4>Chesse Salad</h4>
                                 <p>~ 6.99 $</p>
                                 <button>Order now</button>
                                </div> 
                         </div>
                                                  <div class="menu_item">
-                            <img src="./public/assets/Image20251025093856.png" alt="">
+                            <img src="./public/assets/Image20251025093944.png" alt="">
                                <div>
-                                <h4>Hamburger</h4>
-                                <p>~ 6.99 $</p>
+                                <h4>Korean Salad</h4>
+                                <p>~ 7.99 $</p>
                                 <button>Order now</button>
                                </div> 
                         </div>
                                                  <div class="menu_item">
-                            <img src="./public/assets/Image20251025093856.png" alt="">
+                            <img src="./public/assets/Image20251025093948.png" alt="">
                                <div>
-                                <h4>Hamburger</h4>
-                                <p>~ 6.99 $</p>
-                                <button>Order now</button>
-                               </div> 
-                        </div>
-                                                 <div class="menu_item">
-                            <img src="./public/assets/Image20251025093856.png" alt="">
-                               <div>
-                                <h4>Hamburger</h4>
-                                <p>~ 6.99 $</p>
-                                <button>Order now</button>
-                               </div> 
-                        </div>
-                                                 <div class="menu_item">
-                            <img src="./public/assets/Image20251025093856.png" alt="">
-                               <div>
-                                <h4>Hamburger</h4>
-                                <p>~ 6.99 $</p>
+                                <h4>Fish Salad</h4>
+                                <p>~ 7.99 $</p>
                                 <button>Order now</button>
                                </div> 
                         </div>
