--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
                             <li><a href="">Home</a></li>
                             <li><a href="">About Us</a></li>
-                            <li><a href="">Menu</a></li>
-                            <li><a href="">Contact Us</a></li>
+                            <li><a href="#menu_items">Menu</a></li>
+                            <li><a href="#footer">Contact Us</a></li>
 
                         </ul>
                  </nav>
